[package]
name = "vuln_dapp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vuln_dapp"

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token", "associated_token"] }
solana-program = "1.18.26"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
